@@ -17,9 +17,7 @@
 package com.alibaba.cloud.sentinel.rest;
 
 import java.io.ByteArrayInputStream;
-import java.io.IOException;
 import java.io.InputStream;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -30,14 +28,14 @@ import com.alibaba.cloud.sentinel.custom.SentinelProtectInterceptor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
-import org.springframework.http.client.AbstractClientHttpResponse;
+import org.springframework.http.client.ClientHttpResponse;
 
 /**
  * Using by {@link SentinelRestTemplate} and {@link SentinelProtectInterceptor}.
  *
  * @author <a href="mailto:fangjian0423@gmail.com">Jim</a>
  */
-public class SentinelClientHttpResponse extends AbstractClientHttpResponse {
+public class SentinelClientHttpResponse implements ClientHttpResponse {
 
 	private String blockResponse = "RestTemplate request block by sentinel";
 
@@ -49,12 +47,12 @@ public class SentinelClientHttpResponse extends AbstractClientHttpResponse {
 	}
 
 	@Override
-	public int getRawStatusCode() throws IOException {
-		return HttpStatus.OK.value();
+	public HttpStatus getStatusCode() {
+		return HttpStatus.OK;
 	}
 
 	@Override
-	public String getStatusText() throws IOException {
+	public String getStatusText() {
 		return blockResponse;
 	}
 
@@ -64,15 +62,14 @@ public class SentinelClientHttpResponse extends AbstractClientHttpResponse {
 	}
 
 	@Override
-	public InputStream getBody() throws IOException {
+	public InputStream getBody() {
 		return new ByteArrayInputStream(blockResponse.getBytes());
 	}
 
 	@Override
 	public HttpHeaders getHeaders() {
 		Map<String, List<String>> headers = new HashMap<>();
-		headers.put(HttpHeaders.CONTENT_TYPE,
-				Arrays.asList(MediaType.APPLICATION_JSON_VALUE));
+		headers.put(HttpHeaders.CONTENT_TYPE, List.of(MediaType.APPLICATION_JSON_VALUE));
 		HttpHeaders httpHeaders = new HttpHeaders();
 		httpHeaders.putAll(headers);
 		return httpHeaders;
